2008-01-08  Dmitry Dulepov  <stanislas.rolland@fructifor.ca>

	* Fixed bug #6991: Enable stdWrap for wrapItemAndSub

2008-01-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #6961: Errors in link creation popup window

2007-01-06  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5994: IRRE - RTEhtmlarea is not show in child records if parent has no RTE

2008-01-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature/Cleanup: Acronym plugin of htmlArea RTE using new plugin API and enabled in IE7
	* Fixed issue 6154: Plugin Acronym enables class abbr for span
	* Added feature 1927: Activate Acronym Plugin for IE
	* (major) Feature: Improved behaviour and configuration options for inline elements and text styling
	* Added feature 3708 (complete): support for <q>
	* Fixed issue 5952 (complete): Usability Issue with classes wrapped with <> in select lists
	* Added feature 6034: Improvements of inlineCSS: adding classes to inline elements without additional span
	* Fixed issue 6839: sub and sup are added via CSS instead of tags in Safari
	* Fixed issue 7052: Permission problem of RTE images

2008-01-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* (major) Feature: Improved behaviour and configuration options of formatblock and blockstyle drop-down lists
	* Feature:  Added buttons insertparagraphbefore, insertparagraphafter and blockquote
	* Feature:  Added Page TSConfig RTE sub-array mutuallyExclusiveClasses
	* Fixed issue 5952 (partial): Usability Issue with classes wrapped with <> in select lists
	* Fixed issue 5951: Disturbing behaviour of indent/outdent and TAB
	* Added feature 3708 (partial): support for <blockquote>
	* Fixed issue 5977: align="center" (right or left) not any more supported by W3C
	* Fixed issue 6837: Strange layout for header N except the first one (Safari)
	* Cleanup: Character Map plugin now using new plugin API

2007-12-30  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
