@@ -118,10 +118,9 @@ class SC_alt_file_navframe {
 			$this->doc->backPath = $BACK_PATH;
 			$this->doc->docType = 'xhtml_trans';
 
-				// Adding javascript code for AJAX (prototype), drag&drop and the pagetree
-			$this->doc->JScode  = '
-			<script type="text/javascript" src="'.$this->backPath.'contrib/prototype/prototype.js"></script>
-			<script type="text/javascript" src="'.$this->backPath.'tree.js"></script>'."\n";
+				// Adding javascript code for AJAX (prototype), drag&drop and the filetree as well as the click menu code
+			$this->doc->getDragDropCode('folders');
+			$this->doc->getContextMenuCode();
 
 				// Setting JavaScript for menu.
 			$this->doc->JScode .= $this->doc->wrapScriptTags(
@@ -129,9 +128,6 @@ class SC_alt_file_navframe {
 
 			// setting prefs for pagetree and drag & drop
 			Tree.thisScript    = "'.$this->foldertree->thisScript.'";
-			DragDrop.changeURL = "'.$this->backPath.'alt_clickmenu.php";
-			DragDrop.backPath  = "'.t3lib_div::shortMD5(''.'|'.$GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey']).'";
-			DragDrop.table     = "folders";
 
 			// Function, loading the list frame from navigation tree:
 			function jumpTo(id, linkObj, highlightID, bank)	{
@@ -147,9 +143,6 @@ class SC_alt_file_navframe {
 			}
 			'.($this->cMR ? " jumpTo(top.fsMod.recentIds['file'],'');" : '')
 			);
-
-				// Click menu code is added:
-			$this->doc->getContextMenuCode();
 		}
 	}
 
